  - list-virtual: fix displaying of 'modified' column for aliases when using
	postgres
  - replaced deprecated split() with preg_split() or explode()
  - functions.inc.php: better error messages when database functions are missing
  - create domain: fixed typo in variable name that broke the default value for
    default aliases
  - vacation.pl logged literal $variable instead of the variable content at two
    places
  - POSTFIX_CONF.txt: fixed filename for quota map
  - config.inc.php: removed double $CONF['database_prefix']
  - config.inc.php: fixed comments about domain_post* script parameters
  - fixed db_delete() to use table_by_key() so that it works with non-default
    table names
  - updated INSTALL.TXT and UPGRADE.TXT
  - sk translation update
  - some more minor fixes

Version 2.3.2 - 2010/08/24 - SVN r860 (postfixadmin-2.3 branch)
---------------------------------------------------------------

  - SUMMARY: PostfixAdmin 2.3.2 is a bugfix-only release for Postfix Admin 2.3.1
  - SECURITY: attackers could find out if a admin exists (login pre-filled the
    username after "only" a wrong password was entered)
  - SECURITY: fix sql injection in list-domain (only exploitable by superadmins)
  - alias targets in users/edit-alias are now validated
  - invalid alias targets in users/edit-alias are shown to the user again
    instead of dropping them
  - fix dovecot:* password encryption (was broken in 2.3.1)
  - fix displaying used quota for dovecot <= 1.1 (was broken in 2.3.1)
  - when deleting a domain that is an alias domain (on the "from" side), the
    alias domain is deleted

Version 2.3.1 - 2010/07/09 - SVN r847 (postfixadmin-2.3 branch)
---------------------------------------------------------------

  - SUMMARY: PostfixAdmin 2.3.1 is a bugfix-only release for Postfix Admin 2.3.
    The only visible change is displaying the alias target for mailboxes which
    was a longstanding issue/"missing feature".